Projekt/development/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend-deployment
  namespace: development
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend

  replicas: 2
  template: 
    metadata:
      labels: 
        app: backend
        
    spec:
      containers:
      - name: books-backend
        image: tusiaa/books-api:release-1.1
        ports:
        - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: development
  labels:
    app: backend

spec:
  selector:
    app: backend

  ports:
    - port: 3001
      targetPort: 3001
