Projekt/development/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
  namespace: development
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend

  replicas: 2
  template: 
    metadata:
      labels: 
        app: frontend
        
    spec:
      containers:
      - name: books-frontend
        image: tusiaa/books-app:release-1.1
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: development
  labels:
    app: frontend
    
spec:
  selector:
    app: frontend

  ports:
    - port: 3000
      targetPort: 3000
