Projekt/development/redisdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisdb-deployment
  namespace: development
spec:
  selector:
    matchLabels:
      app: redisdb

  replicas: 1
  template:
    metadata:
      labels:
        app: redisdb

    spec:
      containers:
      - name: redisdb
        image: redis:4.0.8-alpine
        ports:
        - containerPort: 6379

      volumes:
      - name: redisdb-data
        persistentVolumeClaim:
          claimName: redisdb-data

---

apiVersion: v1
kind: Service
metadata:
  name: redisdb-service
  namespace: development
  labels:
    app: redisdb

spec:
  selector:
    app: redisdb

  ports:
  - port: 6379
    targetPort: 6379
