Projekt/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: development
  labels:
    app: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: books.tusiaa.com
    http:
      paths:
      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 3000

      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port: 
              number: 3001
